--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.18",
+    "@anthropic-ai/sdk": "^0.60.0",
+    "@nanostores/react": "github:ai/react",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
