--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@ai-sdk/react": "^2.0.18",
     "@anthropic-ai/sdk": "^0.60.0",
     "@nanostores/react": "github:ai/react",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "tw-animate-css": "^1.3.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
