Added advanced RAG system. Still lack of documents

--- a/package.json
+++ b/package.json
@@ -11,22 +11,31 @@
   "dependencies": {
     "@ai-sdk/react": "^2.0.18",
     "@anthropic-ai/sdk": "^0.60.0",
+    "@chroma-core/default-embed": "^0.1.8",
     "@nanostores/react": "github:ai/react",
+    "chromadb": "^3.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
+    "openai": "^5.15.0",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "tw-animate-css": "^1.3.7"
+    "tw-animate-css": "^1.3.7",
+    "voyageai": "^0.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/express": "^5.0.3",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
