--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "chromadb": "^3.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "express": "^5.1.0",
-    "express-fileupload": "^1.5.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
@@ -28,8 +26,7 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "tw-animate-css": "^1.3.7",
-    "voyageai": "^0.0.8"
+    "tw-animate-css": "^1.3.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
