--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@ai-sdk/react": "^2.0.18",
     "@anthropic-ai/sdk": "^0.60.0",
-    "@chroma-core/default-embed": "^0.1.8",
     "@nanostores/react": "github:ai/react",
     "chromadb": "^3.0.14",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +28,7 @@
     "tw-animate-css": "^1.3.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.5.0",
     "@tailwindcss/postcss": "^4",
     "@types/express": "^5.0.3",
     "@types/node": "^20",
