--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@ai-sdk/react": "^2.0.18",
     "@anthropic-ai/sdk": "^0.60.0",
     "@nanostores/react": "github:ai/react",
+    "@xyflow/react": "^12.10.0",
     "chromadb": "^3.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "css-fade": "^1.0.9",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
